Thu Jun 26 02:37:59 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Messaging/AMH_Response_Handler.cpp:
        
          Set the outbound GIOP version number to the correct value when
          sending a response from an AMH servant. The problem is that there
          are too many output CDR instances and AMH response handler uses
          a different one from the generated skeletons. This resolves the
          issue raised by Steve Vinoski and Ittehad Shaikh.

Wed Jun 25 15:35:59 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannelFactory.h:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannel.h:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannelFactory.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Timestamp_Monitor.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Dynamic_Statistic.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Timestamp_Monitor.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/NotificationServiceMonitor_i.h:

          Added TAO_HAS_MONITOR_FRAMEWORK==1 guards or changed existing ones
          from ACE_HAS_MONITOR_FRAMEWORK==1.

Wed Jun 25 14:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/HandleExhaustion/client.cpp:
        * tests/HandleExhaustion/server.cpp:
        * tests/Bug_2424_Regression/client.cpp:
        * tests/Bug_2549_Regression/test.cpp:
        * tests/Multiple/client.cpp:
        * tests/RTCORBA/Activate_Object_Multiple_ORBs/test.cpp:
        * tests/Smart_Proxies/Collocation/main.cpp:
        * tests/Smart_Proxies/Collocation/Coll_Tester.h:
        * tests/Smart_Proxies/Collocation/Coll_Tester.cpp:
        * tests/Smart_Proxies/dtor/client.cpp:
        * tests/Smart_Proxies/dtor/server.cpp:
